--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         scale=1.0">
         
         <title>Alura MIDI</title>
+        <link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/reset.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com"
         crossorigin>
