--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Rádio Futebol
+    <title>Alura MIDI
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com"
@@ -18,8 +18,8 @@ href="images/flying-soccer-ball-081682.webp">
 <link rel="stylesheet" href="./css/reset.css">
 </head>
 <body>
-    <h1>Hinos dos times</h1>
-<h2>Rádio Futebol</h2>
+    <h1>Alura MIDI</h1>
+<h2>Rádio Escolar</h2>
 <section class="teclado">
 <button class="tecla tecla_flamengo"> <img  class="tecla" src="Applause-clapping-clip-art-gesture-both-hands-starlight_272468_wh1200.png" alt="flamengo"></button>
         
@@ -33,7 +33,7 @@ href="images/flying-soccer-ball-081682.webp">
         
 <button class="tecla tecla_santos"><img class="tecla"  src="png-transparent-the-joker-illustration-joker-harley-quinn-youtube-t-shirt-joker-heroes-text-logo-thumbnail.png" alt="santos"></button>
 
-<button class="tecla tecla_gremio"><img class="tecla"  src="pngimg.com - racing_flag_PNG13.png" alt="gremio"></button>
+<button class="tecla tecla_gremio"><img class="tecla"  src="360_F_292606333_r5Nr4csJVNaDdhj7e4TP6dn405ypbqIJ-removebg-preview.png" alt="gremio"></button>
 
 <button class="tecla tecla_internacional"><img class="tecla" src="04-32.webp" alt="internacional"></button>
 
