--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ href="images/flying-soccer-ball-081682.webp">
         
 <button class="tecla tecla_santos"><img class="tecla"  src="png-transparent-the-joker-illustration-joker-harley-quinn-youtube-t-shirt-joker-heroes-text-logo-thumbnail.png" alt="santos"></button>
 
-<button class="tecla tecla_gremio"><img class="tecla"  src="360_F_292606333_r5Nr4csJVNaDdhj7e4TP6dn405ypbqIJ.jpg" alt="gremio"></button>
+<button class="tecla tecla_gremio"><img class="tecla"  src="360_F_292606333_r5Nr4csJVNaDdhj7e4TP6dn405ypbqIJ-removebg-preview.png" alt="gremio"></button>
 
 <button class="tecla tecla_internacional"><img class="tecla" src="04-32.webp" alt="internacional"></button>
 
